<?xml version="1.0" encoding="utf-8"?>
<com.jeremiahlewis.peoplemon.Views.RegisterView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/set_username"
        android:ems="10"
        android:id="@+id/setUsername_field" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/set_password"
        android:id="@+id/setPassword_field" />

    <EditText
        android:hint="@string/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmPassword_field" />

    <EditText
        android:hint="@string/email_address_ex_johndoe_yahoo_com"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/setEmail_field" />

    <Button
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:layout_gravity="center_horizontal"/>
</com.jeremiahlewis.peoplemon.Views.RegisterView>